liudf 20151116	apfree luci2 version

--- a/luci2/htdocs/index.html
+++ b/luci2/htdocs/index.html
@@ -10,7 +10,10 @@
             <script src="/luci2/html5.js"></script>
             <script src="/luci2/respond.min.js"></script>
         <![endif]-->
-
+		
+		<script src="/luci2/d3.min.js"></script>
+		<script src="/luci2/d3pie.js"></script>
+	
         <script type="text/javascript" src="/luci2/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="/luci2/jquery.peity.js"></script>
         <script type="text/javascript" src="/luci2/bootstrap.js"></script>
