--- a/luci2/htdocs/index.html
+++ b/luci2/htdocs/index.html
@@ -13,6 +13,7 @@
 		
 		<script src="/luci2/d3.min.js"></script>
 		<script src="/luci2/d3pie.js"></script>
+		<script src="/luci2/liquidFillGauge.js"></script>
 	
         <script type="text/javascript" src="/luci2/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="/luci2/jquery.peity.js"></script>
